--- a/app/translations/messages.pot
+++ b/app/translations/messages.pot
@@ -8,14 +8,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-03-01 08:15+0000\n"
+"POT-Creation-Date: 2024-03-01 08:55+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.13.1\n"
+"Generated-By: Babel 2.14.0\n"
 
 #: app/forms/validators.py:389 app/jinja_filters.py:111
 #, python-format
@@ -563,8 +563,8 @@ msgstr ""
 
 #: app/views/handlers/individual_response.py:329
 msgid ""
-"How would you like <strong class='ons-highlight'>{person_name}</strong> "
-"to receive a separate census?"
+"How would you like <strong class=\"ons-highlight\">{person_name}</strong>"
+" to receive a separate census?"
 msgstr ""
 
 #: app/views/handlers/individual_response.py:352
@@ -605,8 +605,8 @@ msgstr ""
 
 #: app/views/handlers/individual_response.py:455
 msgid ""
-"How would you like to answer <strong class='ons-"
-"highlight'>{person_name_possessive}</strong> questions?"
+"How would you like to answer <strong class=\"ons-"
+"highlight\">{person_name_possessive}</strong> questions?"
 msgstr ""
 
 #: app/views/handlers/individual_response.py:470
@@ -668,8 +668,8 @@ msgstr ""
 
 #: app/views/handlers/individual_response.py:800
 msgid ""
-"What is <strong class='ons-highlight'>{person_name_possessive}</strong> "
-"mobile number?"
+"What is <strong class=\"ons-highlight\">{person_name_possessive}</strong>"
+" mobile number?"
 msgstr ""
 
 #: app/views/handlers/individual_response.py:812
@@ -716,21 +716,21 @@ msgstr[1] ""
 msgid "Confirmation email sent"
 msgstr ""
 
-#: templates/confirmation-email-sent.html:16
+#: templates/confirmation-email-sent.html:15
 msgid "A confirmation email has been sent to {email}"
 msgstr ""
 
-#: templates/confirmation-email-sent.html:25
+#: templates/confirmation-email-sent.html:23
 msgid ""
-"The email will be sent from <strong class='ons-"
-"highlight'>census.2021@notifications.service.gov.uk</strong>"
+"The email will be sent from <strong class=\"ons-"
+"highlight\">census.2021@notifications.service.gov.uk</strong>"
 msgstr ""
 
-#: templates/confirmation-email-sent.html:29
+#: templates/confirmation-email-sent.html:27
 msgid "Didn't receive an email?"
 msgstr ""
 
-#: templates/confirmation-email-sent.html:30
+#: templates/confirmation-email-sent.html:28
 msgid ""
 "It can take a few minutes for the email to arrive. If it doesn't arrive, "
 "check your junk mail, or you can <a href='{send_confirmation_email_url}' "
@@ -1168,8 +1168,8 @@ msgstr ""
 
 #: templates/individual_response/confirmation-text-message.html:25
 msgid ""
-"The text will be sent from <strong class='ons-"
-"highlight'>Census2021</strong>"
+"The text will be sent from <strong class=\"ons-"
+"highlight\">Census2021</strong>"
 msgstr ""
 
 #: templates/individual_response/interstitial.html:8
@@ -1300,7 +1300,7 @@ msgstr ""
 
 #: templates/partials/individual-response-guidance.html:14
 msgid ""
-"You can <strong class='ons-highlight'>share your household access "
+"You can <strong class=\"ons-highlight\">share your household access "
 "code</strong> with the people you live with so they can complete their "
 "own sections."
 msgstr ""
